Setup project updated to fix the problem with failing to execute srm.exe

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/NetworkAdapterSelector.Setup/NetworkAdapterSelector.Setup Data/*
+/NetworkAdapterSelector.Setup/NetworkAdapterSelector.Setup/*
