* Upgraded to the new VS project style and .Net4.6.2
* Better IPv6 support
* Multiple bugs and crashes fixed
* More detailed logging points
* Dependency update and cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,5 @@ _Pvt_Extensions
 .fake/
 /NetworkAdapterSelector.Setup/NetworkAdapterSelector.Setup Data/*
 /NetworkAdapterSelector.Setup/NetworkAdapterSelector.Setup/*
+/NetworkAdapterSelector.Hook/*.exe
+/NetworkAdapterSelector.Hook/*.dll
