--- a/NetworkAdapterSelector.Hook/NetworkAdapterSelector.Hook.csproj
+++ b/NetworkAdapterSelector.Hook/NetworkAdapterSelector.Hook.csproj
@@ -3,15 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
-    <Version>1.0.0.0</Version>
     <Company>Soroush Falahati (falahati.net)</Company>
-    <Description></Description>
+    <Description>A simple solution that lets the user to force bind a program to a specific network adapter</Description>
     <Authors>Soroush Falahati</Authors>
-    <Copyright>Copyright © Soroush Falahati 2018</Copyright>
+    <Copyright>Copyright Soroush Falahati 2018</Copyright>
     <Platforms>AnyCPU</Platforms>
     <Product>Network Adapter Selector</Product>
-    <IncludeSymbols>true</IncludeSymbols>
-    <IncludeSource>true</IncludeSource>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Title>Network Adapter Selector</Title>
     <SignManifests>false</SignManifests>
@@ -19,15 +16,23 @@
     <AssemblyOriginatorKeyFile>NetworkAdapterSelector.Hook.snk</AssemblyOriginatorKeyFile>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\Debug</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="EasyHook" Version="2.7.6789" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="EasyHook32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="EasyHook32Svc.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
